<resources>
    <string name="app_name">RememberMe</string>
    <string name="menu_label">RememberMe</string>
    <string name="menu_selectday_label">Select a day</string>
    <string name="action_viewall">View all tasks</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="lbl_new_task">Create new task</string>
    <string name="lbl_edit_task">Edit your task</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save it</string>
    <string name="lbl_delete">Delete it</string>
    <string name="lbl_edit">Edit</string>

    <string name="lbl_field_date">Date</string>
    <string name="lbl_field_time">Time</string>
    <string name="lbl_field_description">Description</string>
    <string name="lbl_field_alarm">Alarm</string>

    <string name="msgNoTasks">There are no tasks yet.</string>
    <string name="msgNewTaskSaved">The task was created successfully!</string>
    <string name="msgTaskSaved">The task was saved!</string>
    <string name="msgInvalidDate">Sorry, you haven\'t entered a valid date :[</string>
    <string name="msgInvalidFields">Sorry, you must fill all fields :[</string>
    <string name="msgNoTasksToday">Hey, you don\'t have tasks assigned today yet...</string>
    <string name="msgNoTasksThisDate">You don\'t have tasks assigned for that date yet!</string>
</resources>
