<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_viewall" android:title="@string/action_viewall"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="100" android:showAsAction="never" />

    <item
        android:id="@+id/action_pickday"
        android:title="@string/menu_selectday_label"
        android:icon="@drawable/ic_action_go_to_today"
        android:showAsAction="always"

        />
</menu>
