<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/vEdit"
    android:weightSum="1"
    android:padding="20dp">


    <TextView
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_field_date"
        android:id="@+id/lblDate"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txtDate"

        android:layout_weight="0.06" />

    <TextView
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_field_time"
        android:id="@+id/lblTime"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/txtTime"

        android:layout_weight="0.06" />

    <TextView
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_field_description"
        android:id="@+id/lblDescription"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescription"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_field_alarm"
            android:id="@+id/lblAlarm"
            android:layout_weight="0.03"
            android:layout_gravity="center_horizontal"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="31dp"
            android:layout_height="wrap_content"
            android:id="@+id/chkEditAlarm"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:layout_column="2"
            android:checked="true" />


    </LinearLayout>



</LinearLayout>